; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2440/extr_dma.c_s3c2440_dma_select.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2440/extr_dma.c_s3c2440_dma_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s3c2410_dma_chan = type { i32, i64 }
%struct.s3c24xx_dma_map = type { i32* }

@DMA_CH_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s3c2410_dma_chan*, %struct.s3c24xx_dma_map*)* @s3c2440_dma_select to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s3c2440_dma_select(%struct.s3c2410_dma_chan* %0, %struct.s3c24xx_dma_map* %1) #0 {
  %3 = alloca %struct.s3c2410_dma_chan*, align 8
  %4 = alloca %struct.s3c24xx_dma_map*, align 8
  store %struct.s3c2410_dma_chan* %0, %struct.s3c2410_dma_chan** %3, align 8
  store %struct.s3c24xx_dma_map* %1, %struct.s3c24xx_dma_map** %4, align 8
  %5 = load %struct.s3c24xx_dma_map*, %struct.s3c24xx_dma_map** %4, align 8
  %6 = getelementptr inbounds %struct.s3c24xx_dma_map, %struct.s3c24xx_dma_map* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %3, align 8
  %9 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds i32, i32* %7, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @DMA_CH_VALID, align 4
  %14 = xor i32 %13, -1
  %15 = and i32 %12, %14
  %16 = load %struct.s3c2410_dma_chan*, %struct.s3c2410_dma_chan** %3, align 8
  %17 = getelementptr inbounds %struct.s3c2410_dma_chan, %struct.s3c2410_dma_chan* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
